# pipecat-agent-builder

./: .env.example  .env.pipecat  .env.railway  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.pipecat  FINAL_TEST_REPORT.md  IMPROVEMENTS.md  MVP_SUMMARY.md  Makefile  PIPECAT_CLOUD_DEPLOYMENT.md  QUICKSTART.md  RAILWAY_SUMMARY.md  README-MVP.md  README-PIPECAT-CLOUD.md  README-RAILWAY.md  README.md  STATUS.md  TESTING_REPORT.md  bot.py  main.py  mvp_main.py  pcc-deploy.toml  pyproject.toml  railway.json  requirements-mvp.txt  requirements-pipecat.txt  requirements-railway.txt  requirements.txt  setup.py  test_main_functionality.py  test_mvp_comprehensive.py  test_mvp_final.py  test_system.py  test_without_conversation.py  web_app.py
archive/: README.md
archive/production-features/: monitoring.py  test_comprehensive.py  test_core.py  test_templates.py
client/: index.html  package.json  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AgentBuilder.tsx  VoiceInterface.tsx
core/: config.py  exceptions.py  logger.py  simple_config.py  validators.py
deployment/: pipecat_cloud.py
examples/: example_usage.py
generation/: templates.py
interface/: conversation.py  simple_conversation.py
knowledge/: vectorizer.py
mcp/: cascade_client.py
scripts/: vectorize_docs.py
