[project]
name = "pipecat-agent-builder"
version = "0.1.0"
description = "Voice-only AI assistant for building custom Pipecat agents"
authors = [
    {name = "Pipecat Agent Builder", email = "builder@pipecat.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[daily,deepgram,openai,cartesia]>=0.0.50",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
